# PixelRoot32-Sprite-Sheet-Compiler

./: .gitignore  CHANGELOG.md  PLAN_IMPLEMENTACION.md  README.md  build_exe.bat  convert_ico.py  convert_icon.py  ejemplo_api.py  main.py  pr32-sprite-compiler-gui.py  pr32-sprite-compiler.py  propuesta_arquitectura.md  pyproject.toml  sample.md
.github/workflows/: release.yml
assets/: pr32_logo.icns
pr32_sprite_compiler/: __init__.py
pr32_sprite_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pr32_sprite_compiler/core/: __init__.py  api.py  compiler.py  exceptions.py  exporter.py  logging.py
pr32_sprite_compiler/gui/: __init__.py  main_window.py
pr32_sprite_compiler/services/: __init__.py
src/core/: compiler.py  models.py
src/gui/: main_window.py
src/services/: exporter.py
tests/: test_api.py  test_integration.py
